static/css/apps/activity.css
/* ==========================================================================
Time entry form
========================================================================== */

/* styles set on forms.css to allow rendering from matter detail */

.actions-preview {
  display: none;
}


/* ==========================================================================
Expenses form
========================================================================== */

/* styles set on forms.css to allow rendering from matter detail */


/* ==========================================================================
Activity list table
========================================================================== */

.activity {
  min-width: 60.5rem;
  width: 100%;
}

.activity.expenses-list {
  min-width: 52rem;
}

.activity.expenses-list .amount {
  text-align: right;
  width: 7.5rem;
}

.activity .date {
  width: 7.5rem;
}

.activity .user {
  width: 4rem;
}

.activity .matter {
  width: 15rem;
}

.activity .actions {
  min-width: 18rem;
  white-space: normal;
}

.activity .hours {
  text-align: right;
  width: 5rem;
}

.activity .hours a {
  color: inherit;
}

.activity .rate {
  text-align: right;
  width: 5rem;
}

.activity .fee {
  text-align: right;
  width: 7.5rem;
}


/* ==========================================================================
Activity summary table
========================================================================== */

.summary table td {
  width: 50%;
}



/* ==========================================================================
Codes Table Action Icons
========================================================================== */

.codes-table .edit-icon-button {
  margin-right: 1.5rem;
}

.codes-table .edit-icon {
  color: var(--color-primary);
}

/* .codes-table .code-column { */

/*   text-align: left; */

/* } */


/* ==========================================================================
 Codes Reference Table
========================================================================== */

#codes-reference-container {
  /* border-top: 1px solid var(--stone-200); */
}

.codes-reference-table-container {
  margin-top: 0.5rem;
}

.codes-reference-table {
  margin: 0;
}

.codes-reference-table th {
  background-color: var(--background-section);
  color: var(--color-darker);
  font-weight: 500;
}

